--- a/intranet/location.d/grafana.conf
+++ b/intranet/location.d/grafana.conf
@@ -3,3 +3,5 @@
   ProxyPassReverse http://grafana:3000/
   RequestHeader set X-WEBAUTH-USER "%{SSL_CLIENT_S_DN}s"
 </Location>
+RewriteEngine on
+RewriteRule  ^/grafana$ /grafana/ [R]
