--- a/intranet/location.d/jenkins.conf
+++ b/intranet/location.d/jenkins.conf
@@ -1,4 +1,6 @@
 AllowEncodedSlashes NoDecode
+RewriteEngine on
+RewriteRule  ^/jenkins$ /jenkins/ [R]
 ProxyPass         /jenkins  http://jenkins:8080/jenkins nocanon disablereuse=On
 ProxyPassReverse  /jenkins  http://jenkins:8080/jenkins
 ProxyPassReverse  /jenkins  https://i.trajano.net/jenkins
