--- a/intranet/location.d/nexus.conf
+++ b/intranet/location.d/nexus.conf
@@ -1,6 +1,8 @@
 ProxyPass         /nexus  http://nexus:8081/nexus nocanon disablereuse=On
 ProxyPassReverse  /nexus  http://nexus:8081/nexus
 ProxyPassReverse  /nexus  https://i.trajano.net/nexus
+RewriteEngine on
+RewriteRule  ^/nexus$ /nexus/ [R]
 <Proxy http://nexus:8080/nexus*>
     Order deny,allow
     Allow from all
