--- a/intranet/location.d/portainer.conf
+++ b/intranet/location.d/portainer.conf
@@ -1,8 +1,6 @@
 <Location /portainer>
-  RewriteEngine on
-  RewriteRule  ^/portainer(/.*)?  $1
   ProxyPass         http://portainer:9000
   ProxyPassReverse  http://portainer:9000
-  # ProxyPass         ws://portainer:9000
 </Location>
-Alias /portainer /portainer/
+RewriteEngine on
+RewriteRule  ^/portainer$ /portainer/ [R]
