--- a/intranet/location.d/dashboard.conf
+++ b/intranet/location.d/dashboard.conf
@@ -1,2 +1,4 @@
 ProxyPass "/swarm" "http://dashboard:8080"
 ProxyPass "/stream" "ws://dashboard:8080/stream"
+RewriteEngine on
+RewriteRule  ^/swarm$ /swarm/ [R]
