Updated how Jenkins is built

--- a/ci/docker-compose.yml
+++ b/ci/docker-compose.yml
@@ -29,7 +29,7 @@ services:
   jenkins:
     image: trajano.net/jenkins
     networks:
-    - default
+    - intranet
     - smtp
     volumes:
     - jenkins_home:/var/jenkins_home
