--- a/mon/docker-compose.override.yml
+++ b/mon/docker-compose.override.yml
@@ -1,5 +1,10 @@
 #docker stack deploy -c docker-compose.yml --with-registry-auth trajano
 version: '3.4'
+configs:
+  node_rules:
+    file: ./prometheus/rules/swarm_node.rules.yml
+  task_rules:
+    file: ./prometheus/rules/swarm_task.rules.yml
 services:
   prometheus:
     build: ./prometheus
