--- a/web/conf.d/trajano.net.conf
+++ b/web/conf.d/trajano.net.conf
@@ -26,7 +26,7 @@ server {
         	return 404;
 	    }
 		auth_basic "Registry realm";
-      	auth_basic_user_file /etc/nginx/conf.d/nginx.htpasswd;
+      	auth_basic_user_file /etc/nginx/conf.d/registry.htpasswd;
 		add_header 'Docker-Distribution-Api-Version' 'registry/2.0' always;
 		client_max_body_size 600M;
 		resolver 127.0.0.11 valid=30s;
